--- a/packages/fluent/scss/core/module-system/_components.scss
+++ b/packages/fluent/scss/core/module-system/_components.scss
@@ -22,6 +22,7 @@ $components: (
     // Indicators
     "avatar",
     "badge",
+    "color-preview",
     "loader",
     "loading",
     "color-preview",
