--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -28,7 +28,7 @@
 // @use "avatar";
 // @use "badge";
 // @use "chip";
-// @use "color-preview";
+@use "color-preview";
 // @use "loader";
 // @use "loading";
 // @use "skeleton";
@@ -190,7 +190,7 @@
     // @include avatar.styles();
     // @include badge.styles();
     // @include chip.styles();
-    // @include color-preview.styles();
+    @include color-preview.styles();
     // @include loader.styles();
     // @include loading.styles();
     // @include skeleton.styles();
