--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -66,7 +66,7 @@
 // @use "colorpalette";
 // @use "colorgradient";
 // @use "coloreditor";
-// @use "colorpicker";
+@use "colorpicker";
 @use "combobox";
 @use "dateinput";
 @use "datepicker";
@@ -228,7 +228,7 @@
     // @include colorpalette.styles();
     // @include colorgradient.styles();
     // @include coloreditor.styles();
-    // @include colorpicker.styles();
+    @include colorpicker.styles();
     @include combobox.styles();
     @include dateinput.styles();
     @include datepicker.styles();
