--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -140,7 +140,7 @@
 
 // Scheduling
 // @use "gantt";
-// @use "scheduler";
+@use "scheduler";
 
 
 // Misc
@@ -302,7 +302,7 @@
 
     // Scheduling
     // @include gantt.styles();
-    // @include scheduler.styles();
+    @include scheduler.styles();
 
 
     // Misc
