--- a/packages/fluent/scss/multiselect/index.scss
+++ b/packages/fluent/scss/multiselect/index.scss
@@ -23,7 +23,7 @@ $_kendo-module-meta: (
 @include module.register( $_kendo-module-meta );
 
 // Expose
-@mixin style() {
+@mixin styles() {
     @include module.render( "multiselect" ) {
         @include kendo-multiselect--layout();
         @include kendo-multiselect--theme();
