--- a/packages/fluent/scss/datetimepicker/_layout.scss
+++ b/packages/fluent/scss/datetimepicker/_layout.scss
@@ -1,4 +1,5 @@
 @use "../core/" as *;
+@use "_variables.scss" as *;
 @use "../action-buttons/_variables.scss" as *;
 
 @mixin kendo-datetimepicker--layout() {
