--- a/packages/fluent/scss/textarea/index.scss
+++ b/packages/fluent/scss/textarea/index.scss
@@ -17,7 +17,7 @@ $_kendo-module-meta: (
 @include module.register( $_kendo-module-meta );
 
 // Expose
-@mixin style() {
+@mixin styles() {
     @include module.render( "textarea" ) {
         @include kendo-textarea--layout();
         @include kendo-textarea--theme();
