--- a/packages/fluent/scss/textbox/index.scss
+++ b/packages/fluent/scss/textbox/index.scss
@@ -17,7 +17,7 @@ $_kendo-module-meta: (
 @include module.register( $_kendo-module-meta );
 
 // Expose
-@mixin style() {
+@mixin styles() {
     @include module.render( "textbox" ) {
         @include kendo-textbox--layout();
         @include kendo-textbox--theme();
