fix(splitter): icons spacing selector

--- a/packages/default/scss/splitter/_layout.scss
+++ b/packages/default/scss/splitter/_layout.scss
@@ -106,19 +106,19 @@
         }
     }
 
-    .k-splitbar-horizontal .k-i-arrow-60-left {
+    .k-splitbar-horizontal .k-collapse-prev {
         margin-bottom: $splitter-drag-icon-margin;
     }
 
-    .k-splitbar-horizontal .k-i-arrow-60-right {
+    .k-splitbar-horizontal .k-collapse-next {
         margin-top: $splitter-drag-icon-margin;
     }
 
-    .k-splitbar-vertical .k-i-arrow-60-up {
+    .k-splitbar-vertical .k-collapse-prev {
         margin-right: $splitter-drag-icon-margin;
     }
 
-    .k-splitbar-vertical .k-i-arrow-60-down {
+    .k-splitbar-vertical .k-collapse-next {
         margin-left: $splitter-drag-icon-margin;
     }
 
