chore(grid): add styling to k-grid-header-menu

--- a/packages/default/scss/adaptive/_layout.scss
+++ b/packages/default/scss/adaptive/_layout.scss
@@ -68,7 +68,7 @@
 
         .k-popup-edit-form,
         .k-grid-edit-form,
-        .k-grid-column-menu,
+        .k-grid-header-menu,
         .k-grid-filter-menu {
 
             .k-content {
