--- a/packages/default/scss/adaptive/_theme.scss
+++ b/packages/default/scss/adaptive/_theme.scss
@@ -62,7 +62,7 @@
         }
 
         .k-grid-edit-form,
-        .k-grid-column-menu,
+        .k-grid-header-menu,
         .k-grid-filter-menu,
         .k-scheduler-edit-form {
 
