chore(icon): fix icon size in fluent

--- a/packages/fluent/scss/icon/_variables.scss
+++ b/packages/fluent/scss/icon/_variables.scss
@@ -2,7 +2,7 @@
 
 /// Font size of the icons.
 /// @group icon
-$kendo-icon-size: var(--kendo-font-size, inherit) !default;
+$kendo-icon-size: 1rem !default;
 
 /// Spacing around the icons.
 /// @group icon
