feat(timeselector): add fluent styles

--- a/packages/fluent/scss/core/module-system/_components.scss
+++ b/packages/fluent/scss/core/module-system/_components.scss
@@ -47,7 +47,7 @@ $components: (
     // Form requirements
     "calendar",
     "popup",
-    "time-selector",
+    "timeselector",
 
     // Augmented inputs
     "autocomplete",
