--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -60,7 +60,7 @@
 
 // Form requirements
 @use "calendar";
-// @use "time-selector";
+@use "timeselector";
 
 
 // Augmented forms
@@ -224,7 +224,7 @@
 
     // Form requirements
     @include calendar.styles();
-    // @include timeselector.styles();
+    @include timeselector.styles();
 
 
     // Augmented forms
