--- a/packages/fluent/scss/action-buttons/index.scss
+++ b/packages/fluent/scss/action-buttons/index.scss
@@ -3,7 +3,7 @@ $_kendo-module-meta: (
     name: "action-buttons",
     dependencies: (
         "button",
-        "icons"
+        "icon"
     )
 );
 
@@ -14,7 +14,7 @@ $_kendo-module-meta: (
 @use "_theme.scss" as *;
 
 // Register
-@use "../core/module-system" as module;
+@use "../core/module-system/" as module;
 @include module.register( $_kendo-module-meta... );
 
 // Expose
