--- a/packages/fluent/scss/card/index.scss
+++ b/packages/fluent/scss/card/index.scss
@@ -1,6 +1,6 @@
 // Module meta
 $_kendo-module-meta: (
-    name: "button",
+    name: "card",
     dependencies: (
         "action-buttons",
         "icon",
@@ -15,7 +15,7 @@ $_kendo-module-meta: (
 @use "_theme.scss" as *;
 
 // Register
-@use "../core/module-system" as module;
+@use "../core/module-system/" as module;
 @include module.register( $_kendo-module-meta... );
 
 // Expose
