--- a/packages/fluent/scss/numerictextbox/index.scss
+++ b/packages/fluent/scss/numerictextbox/index.scss
@@ -16,7 +16,7 @@ $_kendo-module-meta: (
 
 // Register
 @use "../core/module-system/" as module;
-@include module.register( $_kendo-module-meta );
+@include module.register( $_kendo-module-meta... );
 
 // Expose
 @mixin styles() {
