--- a/packages/fluent/scss/calendar/_layout.scss
+++ b/packages/fluent/scss/calendar/_layout.scss
@@ -120,6 +120,7 @@
         min-width: var( --kendo-calendar-header-min-width, #{$kendo-calendar-header-min-width} );
         box-sizing: border-box;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: space-between;
         flex: 0 0 auto;
@@ -312,6 +313,7 @@
             padding-block: var( --kendo-infinite-calendar-header-padding-y, #{$kendo-infinite-calendar-header-padding-y} );
             width: auto;
             min-width: 0;
+            flex-direction: row;
         }
 
         .k-calendar-weekdays {
@@ -377,6 +379,14 @@
     // Multiview calendar
     .k-calendar-range {
         width: auto;
+
+        .k-calendar-header {
+            flex-direction: row;
+
+            &.k-vstack {
+                flex-direction: column;
+            }
+        }
 
         .k-calendar-view {
             width: auto;
