--- a/packages/fluent/scss/datetimepicker/_layout.scss
+++ b/packages/fluent/scss/datetimepicker/_layout.scss
@@ -20,7 +20,7 @@
 
         .k-datetime-buttongroup {
             padding-inline: var( --kendo-datetime-button-group-padding-x, #{$kendo-actions-padding-x} );
-            padding-block: var( --kendo-datetime-button-group-padding-y, #{$kendo-actions-padding-y} )
+            padding-block: var( --kendo-datetime-button-group-padding-y, #{$kendo-actions-padding-y} ) 0;
         }
 
         .k-calendar,
@@ -35,6 +35,10 @@
     .k-datetime-time-wrap {
         text-align: center;
         flex: 0 0 var( --kendo-datetime-width, #{$kendo-datetime-width} );
+    }
+
+    .k-datetime-time-wrap .k-time-header {
+        flex-direction: column;
     }
 
     // Tabs
