feat(fluent): add tooltip styles

--- a/packages/fluent/scss/core/color-system/_theme.scss
+++ b/packages/fluent/scss/core/color-system/_theme.scss
@@ -81,7 +81,7 @@ $kendo-theme-colors: (
         border: get-theme-color-var( success-20 )
     ),
     warning: (
-        text: get-theme-color-var( warning-190 ),
+        text: get-theme-color-var( neutral-160 ),
         bg: get-theme-color-var( warning-20 ),
         border: get-theme-color-var( warning-20 )
     ),
