--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -100,7 +100,7 @@
 @use "notification";
 // @use "popover";
 // @use "responsivepanel";
-// @use "tooltip";
+@use "tooltip";
 @use "window";
 
 
@@ -263,7 +263,7 @@
     @include notification.styles();
     // @include popover.styles();
     // @include responsivepanel.styles();
-    // @include tooltip.styles();
+    @include tooltip.styles();
 
 
     // Navigation
