--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -116,7 +116,7 @@
 
 // Layout & containers
 @use "card";
-// @use "expansion-panel";
+@use "expansion-panel";
 // @use "panelbar";
 // @use "splitter";
 // @use "tilelayout";
@@ -278,7 +278,7 @@
 
     // Layout & containers
     @include card.styles();
-    // @include expansion-panel.styles();
+    @include expansion-panel.styles();
     // @include panelbar.styles();
     // @include splitter.styles();
     // @include tilelayout.styles();
