--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -65,7 +65,7 @@
 // @use "captcha";
 @use "colorpalette";
 @use "colorgradient";
-// @use "coloreditor";
+@use "coloreditor";
 @use "colorpicker";
 @use "combobox";
 @use "dateinput";
@@ -227,7 +227,7 @@
     // @include captcha.styles();
     @include colorpalette.styles();
     @include colorgradient.styles();
-    // @include coloreditor.styles();
+    @include coloreditor.styles();
     @include colorpicker.styles();
     @include combobox.styles();
     @include dateinput.styles();
